--- a/pom.xml
+++ b/pom.xml
@@ -562,6 +562,15 @@
 
 
         <!-- Spring Security -->
+        
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-acl</artifactId>
+            <version>${org.springframework.security.version}</version>
+            <type>jar</type>
+            <scope>compile</scope>
+        </dependency>
+        
         <dependency>
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-core</artifactId>
