--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -11,6 +11,7 @@ log4j.appender.stdout.applicationId = my.application
 log4j.appender.stdout.warnOrHigherWriteConcern = FSYNC_SAFE
 
 log4j.category.org.apache.activemq=ERROR
-log4j.category.org.springframework.batch=DEBUG
-log4j.category.org.springframework.data.document.mongodb=DEBUG
+#log4j.category.org.springframework.batch=DEBUG
+log4j.category.org.springframework.batch=ERROR
+log4j.category.org.springframework.data.document.mongodb=ERROR
 log4j.category.org.springframework.transaction=INFO
